# applepassgenerator-reloaded

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md
src/applepassgenerator/: __init__.py
tests/: test_version.py
